--- a/public/index.html
+++ b/public/index.html
@@ -12,8 +12,80 @@
     <title>Connect Four</title>
 </head>
 <body>
+    <div class="container">
+        <div class="row">
+            <div class="col-md-6">
+                <h1>Connect Four</h1>
+            </div>
+        </div>
 
+        <div class="row">
+            <div class="col-md-6">
+                <h2>How To Play</h2>
+                <p>Game Rules and Description</p>
+            </div>
+        </div>
 
+        <div class="row">
+            <div class="col-xs-1">.col-md-1</div>
+            <div class="col-xs-1">.col-md-1</div>
+            <div class="col-xs-1">.col-md-1</div>
+            <div class="col-xs-1">.col-md-1</div>
+            <div class="col-xs-1">.col-md-1</div>
+            <div class="col-xs-1">.col-md-1</div>
+            <div class="col-xs-1">.col-md-1</div>
+        </div>
+
+        <div class="row">
+            <div class="col-xs-1">.col-md-1</div>
+            <div class="col-xs-1">.col-md-1</div>
+            <div class="col-xs-1">.col-md-1</div>
+            <div class="col-xs-1">.col-md-1</div>
+            <div class="col-xs-1">.col-md-1</div>
+            <div class="col-xs-1">.col-md-1</div>
+            <div class="col-xs-1">.col-md-1</div>
+        </div>
+
+        <div class="row">
+            <div class="col-xs-1">.col-md-1</div>
+            <div class="col-xs-1">.col-md-1</div>
+            <div class="col-xs-1">.col-md-1</div>
+            <div class="col-xs-1">.col-md-1</div>
+            <div class="col-xs-1">.col-md-1</div>
+            <div class="col-xs-1">.col-md-1</div>
+            <div class="col-xs-1">.col-md-1</div>
+        </div>
+
+        <div class="row">
+            <div class="col-xs-1">.col-md-1</div>
+            <div class="col-xs-1">.col-md-1</div>
+            <div class="col-xs-1">.col-md-1</div>
+            <div class="col-xs-1">.col-md-1</div>
+            <div class="col-xs-1">.col-md-1</div>
+            <div class="col-xs-1">.col-md-1</div>
+            <div class="col-xs-1">.col-md-1</div>
+        </div>
+
+        <div class="row">
+            <div class="col-xs-1">.col-md-1</div>
+            <div class="col-xs-1">.col-md-1</div>
+            <div class="col-xs-1">.col-md-1</div>
+            <div class="col-xs-1">.col-md-1</div>
+            <div class="col-xs-1">.col-md-1</div>
+            <div class="col-xs-1">.col-md-1</div>
+            <div class="col-xs-1">.col-md-1</div>
+        </div>
+
+        <div class="row">
+            <div class="col-xs-1">.col-md-1</div>
+            <div class="col-xs-1">.col-md-1</div>
+            <div class="col-xs-1">.col-md-1</div>
+            <div class="col-xs-1">.col-md-1</div>
+            <div class="col-xs-1">.col-md-1</div>
+            <div class="col-xs-1">.col-md-1</div>
+            <div class="col-xs-1">.col-md-1</div>
+        </div>
+    </div>
 <script 
     src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" 
     integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" 
