Added buttons in formatted divs that will correspond with the rest of the grid.  Styled buttons.

--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
             href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" 
             integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" 
             crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css" href="styles.css">
+    <link rel="stylesheet" href="css/styles.css">
     <title>Connect Four</title>
 </head>
 <body>
@@ -27,63 +27,214 @@
         </div>
 
         <div class="row">
-            <div class="col-xs-1">.col-md-1</div>
-            <div class="col-xs-1">.col-md-1</div>
-            <div class="col-xs-1">.col-md-1</div>
-            <div class="col-xs-1">.col-md-1</div>
-            <div class="col-xs-1">.col-md-1</div>
-            <div class="col-xs-1">.col-md-1</div>
-            <div class="col-xs-1">.col-md-1</div>
+            <div class="col-xs-1 gridButton">
+                <button class="buttons" id="buttonColumnOne">Drop</button>
+            </div>
+            <div class="col-xs-1 gridButton">
+                <button class="buttons" id="buttonColumnTwo">Drop</button>              
+            </div>
+            <div class="col-xs-1 gridButton">
+                <button class="buttons" id="buttonColumnThree">Drop</button>
+            </div>
+            <div class="col-xs-1 gridButton">
+                <button class="buttons" id="buttonColumnFour">Drop</button>
+            </div>
+            <div class="col-xs-1 gridButton">
+                <button class="buttons" id="buttonColumnFive">Drop</button>
+            </div>
+            <div class="col-xs-1 gridButton">
+                <button class="buttons" id="buttonColumnSix">Drop</button>
+            </div>
+            <div class="col-xs-1 gridButton">
+                <button class="buttons" id="buttonColumnSeven">Drop</button>
+            </div>
+        </div>
+
+
+        <div class="row">
+            <div class="col-xs-1 gridBox">
+                <div class="gamePiece">
+                </div>
+            </div>
+            <div class="col-xs-1 gridBox">
+                <div class="gamePiece">
+                </div>                    
+            </div>
+            <div class="col-xs-1 gridBox">
+                <div class="gamePiece">
+                </div>
+            </div>
+            <div class="col-xs-1 gridBox">
+                <div class="gamePiece">
+                </div>
+            </div>
+            <div class="col-xs-1 gridBox">
+                <div class="gamePiece">
+                </div>
+            </div>
+            <div class="col-xs-1 gridBox">
+                <div class="gamePiece">
+                </div>
+            </div>
+            <div class="col-xs-1 gridBox">
+                <div class="gamePiece">
+                </div>
+            </div>
         </div>
 
         <div class="row">
-            <div class="col-xs-1">.col-md-1</div>
-            <div class="col-xs-1">.col-md-1</div>
-            <div class="col-xs-1">.col-md-1</div>
-            <div class="col-xs-1">.col-md-1</div>
-            <div class="col-xs-1">.col-md-1</div>
-            <div class="col-xs-1">.col-md-1</div>
-            <div class="col-xs-1">.col-md-1</div>
+            <div class="col-xs-1 gridBox">
+                <div class="gamePiece">
+                </div>
+            </div>
+            <div class="col-xs-1 gridBox">
+                <div class="gamePiece">
+                </div>                    
+            </div>
+            <div class="col-xs-1 gridBox">
+                <div class="gamePiece">
+                </div>
+            </div>
+            <div class="col-xs-1 gridBox">
+                <div class="gamePiece">
+                </div>
+            </div>
+            <div class="col-xs-1 gridBox">
+                <div class="gamePiece">
+                </div>
+            </div>
+            <div class="col-xs-1 gridBox">
+                <div class="gamePiece">
+                </div>
+            </div>
+            <div class="col-xs-1 gridBox">
+                <div class="gamePiece">
+                </div>
+            </div>
         </div>
 
         <div class="row">
-            <div class="col-xs-1">.col-md-1</div>
-            <div class="col-xs-1">.col-md-1</div>
-            <div class="col-xs-1">.col-md-1</div>
-            <div class="col-xs-1">.col-md-1</div>
-            <div class="col-xs-1">.col-md-1</div>
-            <div class="col-xs-1">.col-md-1</div>
-            <div class="col-xs-1">.col-md-1</div>
+            <div class="col-xs-1 gridBox">
+                <div class="gamePiece">
+                </div>
+            </div>
+            <div class="col-xs-1 gridBox">
+                <div class="gamePiece">
+                </div>                    
+            </div>
+            <div class="col-xs-1 gridBox">
+                <div class="gamePiece">
+                </div>
+            </div>
+            <div class="col-xs-1 gridBox">
+                <div class="gamePiece">
+                </div>
+            </div>
+            <div class="col-xs-1 gridBox">
+                <div class="gamePiece">
+                </div>
+            </div>
+            <div class="col-xs-1 gridBox">
+                <div class="gamePiece">
+                </div>
+            </div>
+            <div class="col-xs-1 gridBox">
+                <div class="gamePiece">
+                </div>
+            </div>
         </div>
 
         <div class="row">
-            <div class="col-xs-1">.col-md-1</div>
-            <div class="col-xs-1">.col-md-1</div>
-            <div class="col-xs-1">.col-md-1</div>
-            <div class="col-xs-1">.col-md-1</div>
-            <div class="col-xs-1">.col-md-1</div>
-            <div class="col-xs-1">.col-md-1</div>
-            <div class="col-xs-1">.col-md-1</div>
+            <div class="col-xs-1 gridBox">
+                <div class="gamePiece">
+                </div>
+            </div>
+            <div class="col-xs-1 gridBox">
+                <div class="gamePiece">
+                </div>                    
+            </div>
+            <div class="col-xs-1 gridBox">
+                <div class="gamePiece">
+                </div>
+            </div>
+            <div class="col-xs-1 gridBox">
+                <div class="gamePiece">
+                </div>
+            </div>
+            <div class="col-xs-1 gridBox">
+                <div class="gamePiece">
+                </div>
+            </div>
+            <div class="col-xs-1 gridBox">
+                <div class="gamePiece">
+                </div>
+            </div>
+            <div class="col-xs-1 gridBox">
+                <div class="gamePiece">
+                </div>
+            </div>
         </div>
 
         <div class="row">
-            <div class="col-xs-1">.col-md-1</div>
-            <div class="col-xs-1">.col-md-1</div>
-            <div class="col-xs-1">.col-md-1</div>
-            <div class="col-xs-1">.col-md-1</div>
-            <div class="col-xs-1">.col-md-1</div>
-            <div class="col-xs-1">.col-md-1</div>
-            <div class="col-xs-1">.col-md-1</div>
+            <div class="col-xs-1 gridBox">
+                <div class="gamePiece">
+                </div>
+            </div>
+            <div class="col-xs-1 gridBox">
+                <div class="gamePiece">
+                </div>                    
+            </div>
+            <div class="col-xs-1 gridBox">
+                <div class="gamePiece">
+                </div>
+            </div>
+            <div class="col-xs-1 gridBox">
+                <div class="gamePiece">
+                </div>
+            </div>
+            <div class="col-xs-1 gridBox">
+                <div class="gamePiece">
+                </div>
+            </div>
+            <div class="col-xs-1 gridBox">
+                <div class="gamePiece">
+                </div>
+            </div>
+            <div class="col-xs-1 gridBox">
+                <div class="gamePiece">
+                </div>
+            </div>
         </div>
 
         <div class="row">
-            <div class="col-xs-1">.col-md-1</div>
-            <div class="col-xs-1">.col-md-1</div>
-            <div class="col-xs-1">.col-md-1</div>
-            <div class="col-xs-1">.col-md-1</div>
-            <div class="col-xs-1">.col-md-1</div>
-            <div class="col-xs-1">.col-md-1</div>
-            <div class="col-xs-1">.col-md-1</div>
+            <div class="col-xs-1 gridBox">
+                <div class="gamePiece">
+                </div>
+            </div>
+            <div class="col-xs-1 gridBox">
+                <div class="gamePiece">
+                </div>                    
+            </div>
+            <div class="col-xs-1 gridBox">
+                <div class="gamePiece">
+                </div>
+            </div>
+            <div class="col-xs-1 gridBox">
+                <div class="gamePiece">
+                </div>
+            </div>
+            <div class="col-xs-1 gridBox">
+                <div class="gamePiece">
+                </div>
+            </div>
+            <div class="col-xs-1 gridBox">
+                <div class="gamePiece">
+                </div>
+            </div>
+            <div class="col-xs-1 gridBox">
+                <div class="gamePiece">
+                </div>
+            </div>
         </div>
     </div>
 <script 
