Added game display div with paragraph

--- a/public/index.html
+++ b/public/index.html
@@ -236,6 +236,13 @@
                 </div>
             </div>
         </div>
+
+        <div class="row">
+            <div class="col-md-6 gameDisplay">
+                <p>Game Display</p>
+            </div>
+        </div>
+
     </div>
 <script 
     src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" 
