--- a/public/index.html
+++ b/public/index.html
@@ -50,189 +50,194 @@
             </div>
         </div>
 
-
+<!-- ROW ONE -->
         <div class="row">
             <div class="col-xs-1 gridBox">
-                <div class="gamePiece">
+                <div class="gamePiece" id="0-0">
                 </div>
             </div>
             <div class="col-xs-1 gridBox">
-                <div class="gamePiece">
+                <div class="gamePiece" id="1-0">
                 </div>                    
             </div>
             <div class="col-xs-1 gridBox">
-                <div class="gamePiece">
+                <div class="gamePiece" id="2-0">
                 </div>
             </div>
             <div class="col-xs-1 gridBox">
-                <div class="gamePiece">
+                <div class="gamePiece" id="3-0">
                 </div>
             </div>
             <div class="col-xs-1 gridBox">
-                <div class="gamePiece">
+                <div class="gamePiece" id="4-0">
                 </div>
             </div>
             <div class="col-xs-1 gridBox">
-                <div class="gamePiece">
+                <div class="gamePiece" id="5-0">
                 </div>
             </div>
             <div class="col-xs-1 gridBox">
-                <div class="gamePiece">
+                <div class="gamePiece" id="6-0">
                 </div>
             </div>
         </div>
 
+ <!-- ROW TWO -->
         <div class="row">
             <div class="col-xs-1 gridBox">
-                <div class="gamePiece">
+                <div class="gamePiece" id="0-1">
                 </div>
             </div>
             <div class="col-xs-1 gridBox">
-                <div class="gamePiece">
+                <div class="gamePiece" id="1-1">
                 </div>                    
             </div>
             <div class="col-xs-1 gridBox">
-                <div class="gamePiece">
+                <div class="gamePiece" id="2-1">
                 </div>
             </div>
             <div class="col-xs-1 gridBox">
-                <div class="gamePiece">
+                <div class="gamePiece" id="3-1">
                 </div>
             </div>
             <div class="col-xs-1 gridBox">
-                <div class="gamePiece">
+                <div class="gamePiece" id="4-1">
                 </div>
             </div>
             <div class="col-xs-1 gridBox">
-                <div class="gamePiece">
+                <div class="gamePiece" id="5-1">
                 </div>
             </div>
             <div class="col-xs-1 gridBox">
-                <div class="gamePiece">
+                <div class="gamePiece" id="6-1">
                 </div>
             </div>
         </div>
 
+ <!-- ROW THREE -->
         <div class="row">
             <div class="col-xs-1 gridBox">
-                <div class="gamePiece">
+                <div class="gamePiece" id="0-2">
                 </div>
             </div>
             <div class="col-xs-1 gridBox">
-                <div class="gamePiece">
+                <div class="gamePiece" id="1-2">
                 </div>                    
             </div>
             <div class="col-xs-1 gridBox">
-                <div class="gamePiece">
+                <div class="gamePiece" id="2-2">
                 </div>
             </div>
             <div class="col-xs-1 gridBox">
-                <div class="gamePiece">
+                <div class="gamePiece" id="3-2">
                 </div>
             </div>
             <div class="col-xs-1 gridBox">
-                <div class="gamePiece">
+                <div class="gamePiece" id="4-2">
                 </div>
             </div>
             <div class="col-xs-1 gridBox">
-                <div class="gamePiece">
+                <div class="gamePiece" id="5-2">
                 </div>
             </div>
             <div class="col-xs-1 gridBox">
-                <div class="gamePiece">
+                <div class="gamePiece" id="6-2">
                 </div>
             </div>
         </div>
 
+ <!-- ROW FOUR -->
         <div class="row">
             <div class="col-xs-1 gridBox">
-                <div class="gamePiece">
+                <div class="gamePiece" id="0-3">
                 </div>
             </div>
             <div class="col-xs-1 gridBox">
-                <div class="gamePiece">
+                <div class="gamePiece" id="1-3">
                 </div>                    
             </div>
             <div class="col-xs-1 gridBox">
-                <div class="gamePiece">
+                <div class="gamePiece" id="2-3">
                 </div>
             </div>
             <div class="col-xs-1 gridBox">
-                <div class="gamePiece">
+                <div class="gamePiece" id="3-3">
                 </div>
             </div>
             <div class="col-xs-1 gridBox">
-                <div class="gamePiece">
+                <div class="gamePiece" id="4-3">
                 </div>
             </div>
             <div class="col-xs-1 gridBox">
-                <div class="gamePiece">
+                <div class="gamePiece" id="5-3">
                 </div>
             </div>
             <div class="col-xs-1 gridBox">
-                <div class="gamePiece">
+                <div class="gamePiece" id="6-3">
                 </div>
             </div>
         </div>
 
+ <!-- ROW FIVE -->
         <div class="row">
             <div class="col-xs-1 gridBox">
-                <div class="gamePiece">
+                <div class="gamePiece" id="0-4">
                 </div>
             </div>
             <div class="col-xs-1 gridBox">
-                <div class="gamePiece">
+                <div class="gamePiece" id="1-4">
                 </div>                    
             </div>
             <div class="col-xs-1 gridBox">
-                <div class="gamePiece">
+                <div class="gamePiece" id="2-4">
                 </div>
             </div>
             <div class="col-xs-1 gridBox">
-                <div class="gamePiece">
+                <div class="gamePiece" id="3-4">
                 </div>
             </div>
             <div class="col-xs-1 gridBox">
-                <div class="gamePiece">
+                <div class="gamePiece" id="4-4">
                 </div>
             </div>
             <div class="col-xs-1 gridBox">
-                <div class="gamePiece">
+                <div class="gamePiece" id="5-4">
                 </div>
             </div>
             <div class="col-xs-1 gridBox">
-                <div class="gamePiece">
+                <div class="gamePiece" id="6-4">
                 </div>
             </div>
         </div>
 
+ <!-- ROW SIX -->
         <div class="row">
             <div class="col-xs-1 gridBox">
-                <div class="gamePiece">
+                <div class="gamePiece" id="0-5">
                 </div>
             </div>
             <div class="col-xs-1 gridBox">
-                <div class="gamePiece">
+                <div class="gamePiece" id="1-5">
                 </div>                    
             </div>
             <div class="col-xs-1 gridBox">
-                <div class="gamePiece">
+                <div class="gamePiece" id="2-5">
                 </div>
             </div>
             <div class="col-xs-1 gridBox">
-                <div class="gamePiece">
+                <div class="gamePiece" id="3-5">
                 </div>
             </div>
             <div class="col-xs-1 gridBox">
-                <div class="gamePiece">
+                <div class="gamePiece" id="4-5">
                 </div>
             </div>
             <div class="col-xs-1 gridBox">
-                <div class="gamePiece">
+                <div class="gamePiece" id="5-5">
                 </div>
             </div>
             <div class="col-xs-1 gridBox">
-                <div class="gamePiece">
+                <div class="gamePiece" id="6-5">
                 </div>
             </div>
         </div>
