--- a/public/index.html
+++ b/public/index.html
@@ -4,10 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" 
-            href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" 
-            integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" 
-            crossorigin="anonymous">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link rel="stylesheet" href="css/styles.css">
     <title>Connect Four</title>
 </head>
@@ -28,25 +25,25 @@
 
         <div class="row">
             <div class="col-xs-1 gridButton">
-                <button class="buttons" id="buttonColumnOne">Drop</button>
+                <button class="buttons" data-button="0">Drop</button>
             </div>
             <div class="col-xs-1 gridButton">
-                <button class="buttons" id="buttonColumnTwo">Drop</button>              
+                <button class="buttons" data-button="1">Drop</button>              
             </div>
             <div class="col-xs-1 gridButton">
-                <button class="buttons" id="buttonColumnThree">Drop</button>
+                <button class="buttons" data-button="2">Drop</button>
             </div>
             <div class="col-xs-1 gridButton">
-                <button class="buttons" id="buttonColumnFour">Drop</button>
+                <button class="buttons" data-button="3">Drop</button>
             </div>
             <div class="col-xs-1 gridButton">
-                <button class="buttons" id="buttonColumnFive">Drop</button>
+                <button class="buttons" data-button="4">Drop</button>
             </div>
             <div class="col-xs-1 gridButton">
-                <button class="buttons" id="buttonColumnSix">Drop</button>
+                <button class="buttons" data-button="5">Drop</button>
             </div>
             <div class="col-xs-1 gridButton">
-                <button class="buttons" id="buttonColumnSeven">Drop</button>
+                <button class="buttons" data-button="6">Drop</button>
             </div>
         </div>
 
@@ -249,15 +246,9 @@
         </div>
 
     </div>
-<script 
-    src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" 
-    integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" 
-    crossorigin="anonymous"></script>
-<script
-  src="https://code.jquery.com/jquery-3.2.1.min.js"
-  integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
-  crossorigin="anonymous"></script>
-<script> 
-    src="script/script.js"</script>
+
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script> 
+<script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
+<script src="script/script.js"></script>
 </body>
 </html>
