Added reset buttonto bottom right corner of board, along with functionality that resets the grid

--- a/public/index.html
+++ b/public/index.html
@@ -246,6 +246,24 @@
                 </div>
             </div>
         </div>
+        
+        <div class="row">
+            <div class="col-xs-1 gridButton">
+            </div>
+            <div class="col-xs-1 gridButton">
+            </div>
+            <div class="col-xs-1 gridButton">
+            </div>
+            <div class="col-xs-1 gridButton">
+            </div>
+            <div class="col-xs-1 gridButton">
+            </div>
+            <div class="col-xs-1 gridButton">
+            </div>
+            <div class="col-xs-1 gridButton">
+                <button class="resetButton">RESET</button>
+            </div>
+        </div>
         <br>
         <br>
 
