Added scoreboard that will keep track of each player's wins.  Started buidling html frame that will house the current player turn.

--- a/public/index.html
+++ b/public/index.html
@@ -248,20 +248,29 @@
         </div>
         
         <div class="row">
-            <div class="col-xs-1 gridButton">
+             <div class="col-xs-1">
             </div>
-            <div class="col-xs-1 gridButton">
+              <div class="col-xs-1">
             </div>
-            <div class="col-xs-1 gridButton">
+               <div class="col-xs-2">
             </div>
-            <div class="col-xs-1 gridButton">
+            <div class="col-xs-2">
+                <h3>Score:</h3>
+                    <p class="playerOne">Player One: 0</p>
+                    <p class="playerTwo">Player Two: 0</p>
             </div>
-            <div class="col-xs-1 gridButton">
-            </div>
-            <div class="col-xs-1 gridButton">
+            <div class="col-xs-3">
+                <h3>Current Turn:</h3>
+                    <p class="currentTurn">Player One</p>
             </div>
             <div class="col-xs-1 gridButton">
                 <button class="resetButton">RESET</button>
+            </div>
+             <div class="col-xs-2">
+            </div>
+            <div class="col-xs-1">
+            </div>
+            <div class="col-xs-1">
             </div>
         </div>
         <br>
