Added more instructions to the how to play section.  Added more material to read.me

--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,7 @@
             <div class="col-md-6">
                 <h2>How To Play</h2>
                 <p>This is a two player game where each player adds a token to a slot while attempting to get four tokens in a row (horizontally, vertically, or diagonally).
-                    The first player to get four tokens in a row is the winner.  Click the drop button to drop a token in the slot.
+                    The first player to get four tokens in a row is the winner.  Click the drop button to drop a token in the slot.  If the game has ended, press the reset button to start a new game.
                 </p>
             </div>
         </div>
